[package]
name = "rgb24"
description = "Basic 24-bit colour representation and manipulation"
version = "0.2.5"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/rgb24"
repository = "https://github.com/stevebob/rgb24"
documentation = "https://docs.rs/rgb24"

[features]
serialize = ["serde"]

[dependencies]
serde = { version = "1.0", features = ["serde_derive"], optional = true }
rand = { version = "0.7", optional = true }

[dev-dependencies]
rand_isaac = "0.2"
